--- a/docker/frr-conf/Dockerfile
+++ b/docker/frr-conf/Dockerfile
@@ -4,8 +4,9 @@ RUN apk add --no-cache python3 py3-pip  \
     && pip3 install pyyaml jinja2
 
 # WORKDIR /workspace
-
-COPY ./build/. .
+COPY render.py ./
+COPY start.sh ./
+COPY template.j2 ./
 
 RUN chmod +x render.py start.sh
 
